apps/jaeger/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
  annotations:
    link.argocd.argoproj.io/external-link: https://jaeger.devxp-tech.io
spec:
  hosts:
    - "jaeger.devxp-tech.io"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 16686
            host: jaeger-query.istio-system.svc.lgsk8sp1.grupologos.local
